# budget-allocation-subset-sum

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  alembic.ini  alembic.ini~  db_handler.py  input.txt  package-lock.json
cpp/: CMakeLists.txt
cpp/include/: backtracking.h  brute_force.h  budget_lib.h  greedy.h
cpp/src/: CMakeLists.txt  bindings.cpp  budget_lib.cpp  budget_lib.h  budget_lib_cpp.h  common.h  main.cpp  test_budget
cpp/src/algorithms/: backtracking.cpp  backtracking.h  brute_force.cpp  brute_force.h  dp.cpp  dp.h  greedy.cpp  greedy.h  hybrid.cpp  hybrid.cpp~  hybrid.h
db/: init.sql  init.sql~
db/migrations/: alembic.ini  env.py  env.py~
db/migrations/versions/: faa4ed50b1c1_initial_schema.py
docs/: dev-frontend-mustread.md  dev-frontend-mustread.md~  future-scope.md  readme-checkpoint1.md~  readme-checkpoint2.md  readthis.md
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: main.tsx  style.css
frontend/src/api/: mocks.ts  solver.ts
frontend/src/components/charts/: ExecutionTimeChart.tsx  MemoryUsageChart.tsx
frontend/src/components/input/: ProjectInputForm.tsx
frontend/src/components/results/: ResultCard.tsx
frontend/src/pages/: AnalyticsPage.tsx  App.tsx  HistoryPage.tsx  SolverPage.tsx
harshu/: README.md  desc.txt  docker-compose.yml  package-lock.json
harshu/cpp/src/: budget_lib.cpp  budget_lib.h  main.cpp
harshu/cpp/src/algorithms/: backtracking.h  brute_force.h  dp.cpp  dp.h  greedy.cpp  greedy.h  hybrid.cpp  hybrid.h  main.cpp
harshu/docs/: dev-backend-mustread-revised.md  dev-backend-mustread.md  dev-frontend-mustread-revised.md  dev-notes.md  real-world-scenarios.md
harshu/frontend/: Dockerfile.frontend  index.html  package-lock.json
harshu/frontend/src/: App.tsx  index.tsx  types.ts
harshu/frontend/src/api/: solver.ts
harshu/frontend/src/components/input/: AlgorithmSelector.tsx  ProjectInputForm.tsx
harshu/frontend/src/pages/: HomePage.tsx  SolverPage.tsx
opti/: docker-compose.yml  package.json  requirements.txt
opti/cpp/: CMakeLists.txt
opti/cpp/include/: brute_force.h  budget_lib.h  dp.h  hybrid.h
opti/cpp/src/: bindings.cpp
opti/cpp/src/algorithms/: backtracking.cpp  brute_force.cpp  dp.cpp  greedy.cpp  hybrid.cpp
opti/docs/: readme-checkpoint1.md
opti/frontend/src/: react-window.d.ts
opti/frontend/src/api/: solver.ts
opti/frontend/src/components/: Layout.tsx
opti/frontend/src/components/input/: BudgetControl.tsx
opti/frontend/src/pages/: HistoryPage.tsx  SolverPage.tsx
opti/python/: Dockerfile  main.py  models.py
opti/python/api/: main.py
opti/python/tests/: test_api.py
python/: README.md  db.py  db.py~  main.py  models.py  plot_comparison.py  requirements.txt  requirements.txt~  test_budget.py
python/api/: main.py  main.py~
python/tests/: test_api.py  test_api.py~  test_budget.py  test_budget.py~
src/: main.cpp  main_cli.cpp  main_gui.cpp  solver.cpp  solver.h
src/AlgorithmSelector/: SolverFactory.cpp  SolverFactory.h
src/Benchmarking/: Benchmark.cpp  Benchmark.h
src/CoreSolver/: BacktrackingSolver.cpp  BacktrackingSolver.h  DpSolver.cpp  DpSolver.h  SubsetSumSolver.h
src/DBLayer/: DatabaseManager.cpp  DatabaseManager.h
src/DataModel/: DataSet.h  SolverResult.h
src/GUI/: MainWindow.cpp  MainWindow.h
tests/: SolverTests.cpp
